# metal

./: .gitignore  .gitmodules  Cargo.toml  IDEAS.md  Makefile  README.md  Xargo.toml  x86_64-euclid.json
arch/x86_64/: boot.asm  grub.cfg  linker.ld
lib/bump_allocator/: Cargo.toml
lib/bump_allocator/src/: lib.rs
lib/interrupts/: Cargo.toml
lib/interrupts/src/: gdt.rs  idt.rs  lib.rs  pic.rs
lib/io/: Cargo.toml
lib/io/src/: lib.rs  port.rs
lib/memory/: Cargo.toml
lib/memory/src/: area_frame_allocator.rs  lib.rs  stack_allocator.rs
lib/memory/src/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
lib/vga/: Cargo.toml
lib/vga/src/: buffer.rs  color.rs  lib.rs  writer.rs
libs/linked_allocator/: Cargo.toml
libs/linked_allocator/src/: block.rs  lib.rs
src/: interrupts.rs  lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  multiboot_header.asm
src/memory/: area_frame_allocator.rs  mod.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
