[package]
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>"]
name = "Metal"
version = "0.1.0"

[dependencies]
bitflags = "0.9.1"
multiboot2 = "*"
once = "0.3.3"
rlibc = "1.0"
x86_64 = "0.1.2"

# internal library crates
bump_allocator = { path = "lib/bump_allocator" }
vga = { path = "lib/vga" }
interrupts = { path = "lib/interrupts" }


[lib]
crate-type = ["staticlib"]
