[package]
authors = ["lsneff"]
name = "interrupts"
version = "0.1.0"

[dependencies]
bit_field = "0.9.0"
bitflags = "1.0.1"
spin = "0.4.6"
x86_64 = "0.1.2"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "0.2.11"

[dependencies.memory]
path = "../memory"

[dependencies.vga]
path = "../vga"
